--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
   <div class="controls">
     <button id="highlightBtn" class="active">Evidenzia Testo</button>
     <button id="drawBtn">Disegna Forma</button>
+    <button id="viewAnnotationsBtn">Visualizza Annotazioni</button>
     <button id="clearBtn" class="danger">Cancella Annotazioni</button>
 
     <div id="highlightOptions" class="options-group">
