add browse mode

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Annotazione</h1>
   <div class="controls">
+    <button id="browseBtn">Naviga Pagina</button>
     <button id="highlightBtn" class="active">Evidenzia Testo</button>
     <button id="drawBtn">Disegna Forma</button>
     <button id="viewAnnotationsBtn">Visualizza Annotazioni</button>
