tailwind but not working well

--- a/popup.html
+++ b/popup.html
@@ -4,13 +4,14 @@
 <head>
   <title>Annotazione</title>
   <link rel="stylesheet" type="text/css" href="popup.css">
+  <!-- <script src="./lib/tailwindcss.js"></script> -->
 </head>
 
 <body>
-  <h1>Annotazione</h1>
+  <h1 class="text-xl">Annotazione</h1>
   <div class="controls">
-    <button id="browseBtn">Naviga Pagina</button>
-    <button id="highlightBtn" class="active">Evidenzia Testo</button>
+    <button id="browseBtn" class="active">Naviga Pagina</button>
+    <button id="highlightBtn">Evidenzia Testo</button>
     <button id="drawBtn">Disegna Forma</button>
     <button id="viewAnnotationsBtn">Visualizza Annotazioni</button>
     <button id="clearBtn" class="danger">Cancella Annotazioni</button>
