--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1 class="text-xl">Annotazione</h1>
+  <h1>Annotazione</h1>
   <div class="controls">
     <button id="browseBtn" class="active">Naviga Pagina</button>
     <button id="highlightBtn">Evidenzia Testo</button>
