--- a/annotations.html
+++ b/annotations.html
@@ -19,6 +19,7 @@
     <div class="actions">
       <button id="refresh-btn" data-i18n="refreshButton"></button>
       <button id="clear-all-btn" class="danger" data-i18n="clearAllButton"></button>
+      <button id="goToWebsite-btn" class="goToWebsite" data-i18n="goToWebsiteButton"></button>
     </div>
   </div>
   <script src="annotations.js"></script>
