--- a/popup.html
+++ b/popup.html
@@ -13,8 +13,8 @@
     <button id="browseBtn" class="active" data-i18n="browsePageButton"></button>
     <button id="highlightBtn" data-i18n="highlightTextButton"></button>
     <button id="drawBtn" data-i18n="drawShapeButton"></button>
-    <button id="viewAnnotationsBtn" data-i18n="viewAnnotationsButton"></button>
-    <button id="clearBtn" class="danger" data-i18n="clearAnnotationsButton"></button>
+    <button id="viewAnnotationsBtn" class="viewAnnotationsBtn" data-i18n="viewAnnotationsButton"></button>
+    <!-- <button id="clearBtn" class="danger" data-i18n="clearAnnotationsButton"></button> -->
 
     <div id="highlightOptions" class="options-group">
       <p data-i18n="highlightColorLabel"></p>
