--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,13 @@
 
 <body>
   <h1 data-i18n="extName"></h1>
+
+  <!-- Add this status display section -->
+  <div id="statusDisplay" class="status-display hidden">
+    <!-- <div class="status-icon">⚠️</div> -->
+    <div class="status-message"></div>
+  </div>
+
   <div class="controls">
     <button id="browseBtn" class="active" data-i18n="browsePageButton"></button>
     <button id="highlightBtn" data-i18n="highlightTextButton"></button>
